samples/_failures_safe/1761224952_a19e76_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8e31e18a.c: In function ‘main’:
./samples/SAFE/__tmp_8e31e18a.c:162:5: error: expected expression at end of input
  162 |     dijkstra(&g,
      |     ^~~~~~~~
./samples/SAFE/__tmp_8e31e18a.c:162:5: error: expected declaration or statement at end of input
